// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DividerDot /> snapshot should match snapshot 1`] = `
<div>
  <mdc-bullet
    class="md-divider-dot-wrapper"
    size="small"
  />
</div>
`;

exports[`<DividerDot /> snapshot should match snapshot with className 1`] = `
<div>
  <mdc-bullet
    class="example-class md-divider-dot-wrapper"
    size="small"
  />
</div>
`;

exports[`<DividerDot /> snapshot should match snapshot with id 1`] = `
<div>
  <mdc-bullet
    class="md-divider-dot-wrapper"
    id="example-id"
    size="small"
  />
</div>
`;

exports[`<DividerDot /> snapshot should match snapshot with style 1`] = `
<div>
  <mdc-bullet
    class="md-divider-dot-wrapper"
    size="small"
    style="color: pink;"
  />
</div>
`;
